# mate

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  __init__.py  cli.py  config.py  pyproject.toml
.github/workflows/: publish.yml
backends/: __init__.py  typst.py
composition/: arrange.py  layout.py  utils.py
core/: __init__.py  drawable.py  element.py  gradient.py  presentation.py  registry.py  slide.py  template.py  topic.py
docs/: README.md
elements/: __init__.py  group.py  image.py  shapes.py  spacing.py  text.py
parser/: __init__.py  ir.py  markdown.py  markup.py  serialize.py
src/mate/: __init__.py  cli.py  config.py  log.py
src/mate/backends/: typst.py
src/mate/composition/: __init__.py
src/mate/core/: __init__.py  directive.py  drawable.py  element.py  figure.py  presentation.py  slide.py  template.py  topic.py  vec.py
src/mate/elements/: __init__.py  code.py  image.py  shapes.py  spacing.py  text.py
src/mate/fonts/: README.md
src/mate/fonts/Lato/: OFL.txt
src/mate/parser/: __init__.py  ir.py  markdown.py  serialize.py
src/mate/templates/: __init__.py  flow.py  simple.py
templates/: __init__.py  flow.py
utils/: __init__.py  arrange.py  layout.py
